[package]
name = "sing"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.14"
macroquad = "0.4.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.11.6", features = ["luajit52", "vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mlua = { version = "0.11.6", features = ["lua52", "vendored"] }
